--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,66 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --color-icon: hsl(150, 100%, 66%);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.advice-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: hsl(218, 23%, 16%);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 2em 3em;
+  border-radius: 10px;
+  gap: 10px;
+  background-color: hsl(217, 19%, 24%);
+  color: hsl(193, 38%, 86%);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h3 {
+  color: var(--color-icon);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divider-tab {
+  display: flex;
+  align-items: center;
+  color: silver;
+  gap: 15px;
+}
+.divider-tab .divider {
+  width: 70px;
+  height: 1px;
+}
+.divider-tab .vertical-divider-tab {
+  display: flex;
+  gap: 10px;
+}
+.divider-tab .vertical-divider-tab .vertical-divider {
+  height: 15px;
+}
+
+.advice-body .icon {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  top: 3.3em;
+  left: 4.5em;
+  outline: none;
+  background-color: hsl(193, 38%, 86%);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+.advice-body .icon:hover {
+  background-color: var(--color-icon);
 }
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
