--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,11 @@ h1 {
 .advice-body .icon:hover {
   background-color: var(--color-icon);
 }
+.advice-body .icon:hover img{
+  display: flex;
+  transform: perspective(600px) rotateY(180deg) !important;
+
+}
 
 @media screen and (max-width: 400px) {
   .container {
@@ -82,5 +87,18 @@ h1 {
   }
   .advice-body .icon {
     left: 8.5em;
+  }
+}
+@media screen and (max-width: 600px) {
+  .container {
+    width: 85vw;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  .divider-tab .divider {
+    width: 85vw;
+  }
+  .advice-body .icon {
+    left: 9.3em;
   }
 }
