Made it responsive

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ h1 {
   transform: perspective(600px) rotateY(180deg) !important;
 }
 
-@media screen and (max-width: 400px) {
+@media only screen and (max-width: 375px) {
   .container {
     width: 85vw;
     margin-left: 2em;
@@ -106,7 +106,7 @@ h1 {
     left: 8.5em;
   }
 }
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 420px) and (min-width: 376px) {
   .container {
     width: 85vw;
     margin-left: 2em;
@@ -116,6 +116,76 @@ h1 {
     width: 85vw;
   }
   .advice-body .icon {
-    left: 9.3em;
+    left: 9.6em;
+  }
+}
+
+@media only screen and (max-width: 500px) and (min-width: 421px) {
+  .container {
+    width: 85vw;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  .divider-tab .divider {
+    width: 85vw;
+  }
+  .advice-body .icon {
+    left: 11.5em;
+  }
+}
+@media only screen and (max-width: 550px) and (min-width: 501px) {
+  .container {
+    width: 85vw;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  .divider-tab .divider {
+    width: 85vw;
+  }
+  .advice-body .icon {
+    left: 14em;
+  }
+}
+
+
+@media only screen and (max-width: 600px) and (min-width: 551px) {
+  .container {
+    width: 85vw;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  .divider-tab .divider {
+    width: 85vw;
+  }
+  .advice-body .icon {
+    left: 15em;
+  }
+}
+
+@media only screen and (max-width: 650px) and (min-width: 600px) {
+  .container {
+    width: 85vw;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  .divider-tab .divider {
+    width: 85vw;
+  }
+  .advice-body .icon {
+    left: 17.3em;
+  }
+}
+
+@media only screen and (max-width: 770px) and (min-width: 650px) {
+  .container {
+    width: 85vw;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  .divider-tab .divider {
+    width: 85vw;
+  }
+  .advice-body .icon {
+    left: 21em;
   }
 }
